# loglens

./: ANNOUNCEMENT.md  README.md  pyproject.toml  requirements.txt
examples/: prompts.md
examples/src/: client.py  writer.py
loglens/: __init__.py  __main__.py  brief.py  cli.py  correlate.py  scan.py  slice.py
tests/: test_correlate.py  test_scan.py
