[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "loglens"
version = "0.1.0"
description = "Code-aware log intelligence: slice a log and correlate file:line tokens to source."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
loglens = "loglens.cli:main"

[tool.setuptools]
packages = ["loglens"]
